# measure-twice-workflow-analyzer

./: .gitignore  README.md  pyproject.toml  run_demo.py  run_demo_1k.py  setup.sh
.github/workflows/: test.yml
demo-output/: README.md  sample_run_dashboard.html  sample_run_dashboard_dark.html  sample_run_report.md
demo-output/n1000/: corpus_floor30.csv  corpus_floor30.json  corpus_n300.csv  corpus_n300.json  headline.md
docs/: privacy.md  prompt-library.md  quickstart.md  selection-criteria.md  troubleshooting.md
examples/: README.md
examples/feature-deploy/: workflow.txt
examples/sales-pipeline/: workflow.txt
examples/support-resolution/: workflow.txt
facilitator/: scan-to-report.md
playbook/: PLAYBOOK.md
scripts/: make_headline.py
src/workflow_analyzer/: __init__.py  cli.py  config.py  corpus.py  cost.py  dashboard.py  prompts.py  report.py  runner.py  schemas.py  stats.py  storage.py
tests/: README.md  conftest.py  test_cli_extended.py  test_cli_smoke.py  test_config.py  test_config_edges.py  test_corpus.py  test_cost.py  test_dashboard.py  test_encoding_fallback.py  test_failure_summary.py  test_partial_save_on_interrupt.py  test_prompts.py  test_report.py  test_runner.py  test_stats.py  test_stats_edges.py  test_storage.py  test_storage_edges.py
web/: README.md  index.html
