[project]
name = "workflow-analyzer"
version = "0.1.0"
description = "Monte Carlo style workflow analysis using LLMs - Measure Twice, Spend Once"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.75.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
workflow-analyzer = "workflow_analyzer.cli:main"
wfa = "workflow_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_analyzer"]
