[project]
name = "measure-twice"
version = "0.2.0"
description = "Measure Twice, Spend Once — Monte Carlo workflow analysis using AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.75.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
mtso = "workflow_analyzer.cli:main"
measure-twice = "workflow_analyzer.cli:main"
# legacy aliases (kept so existing muscle memory / scripts don't break)
wfa = "workflow_analyzer.cli:main"
workflow-analyzer = "workflow_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_analyzer"]
